[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "meshtrbl"
version = "3.0.0"
description = "AI-powered troubleshooting agent for Kubernetes and Consul service mesh"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["kubernetes", "consul", "troubleshooting", "ai", "langchain", "langgraph", "service-mesh", "meshtrbl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.2.0,<0.3.0",
    "langchain-openai>=0.1.0,<0.2.0",
    "langchain-community>=0.2.0,<0.3.0",
    "langchain-core>=0.2.0,<0.3.0",
    "openai>=1.30.0,<2.0.0",
    "kubernetes==29.0.0",
    "python-consul==1.1.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "rich==13.7.0",
    "click==8.1.7",
]

[project.optional-dependencies]
workflow = [
    "langgraph>=0.1.0,<0.2.0",
]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "langgraph>=0.1.0,<0.2.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/meshtrbl"
Documentation = "https://github.com/yourusername/meshtrbl/blob/main/README.md"
Repository = "https://github.com/yourusername/meshtrbl"
"Bug Tracker" = "https://github.com/yourusername/meshtrbl/issues"

[project.scripts]
meshtrbl = "src.agent:main"

[tool.setuptools]
packages = ["src", "src.tools", "src.prompts", "src.workflows"]

[tool.setuptools.package-data]
src = ["prompts/*.py"]
"*" = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true